@@ -2,6 +2,9 @@
 Change log for block_taskchain_navigation
 ========================================
 
+2021-06-18 (29)
+ - remove use of the splat-operator, because it causes a syntax error in PHP 5.4
+
 2020-12-14 (27)
  - increase date range to 2050, and allow more granular definition of minutes
 
